# mcl

./: .pre-commit-config.yaml  MAKEFILE  README.md  bench.py  mypy.ini  pyproject.toml  test.py
.github/workflows/: test.yml
mcl/: builtins.py  dialects.py  internal.py  machine_types.py  memref.py  ndarray.py  vm.py
tests/: test_array.py  test_core.py
